<resources>
    <string name="app_name">SoundAndVideoApp</string>
    <string name="action_settings">Settings</string>
    <string name="playButton">Play</string>
    <string name="pauseButton">Pause</string>
    <string name="stopButton">Stop</string>
    <string name="videoButton">Watch the video</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="homeButton">Home</string>
    <string name="randomButton">Random Sound</string>
</resources>
