<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SoundActivity">

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/soundBar"
        android:layout_marginTop="179dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playButton"
        android:id="@+id/playButton"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/videoButton"
        android:layout_toStartOf="@+id/videoButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pauseButton"
        android:id="@+id/pauseButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopButton"
        android:id="@+id/stopButton"
        android:layout_alignTop="@+id/pauseButton"
        android:layout_toRightOf="@+id/videoButton"
        android:layout_toEndOf="@+id/videoButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videoButton"
        android:id="@+id/videoButton"
        android:layout_marginBottom="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomButton"
        android:id="@+id/randomSoundButton"
        android:layout_above="@+id/videoButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp" />

</RelativeLayout>
